# rustbot

./: Cargo.toml
src/: command_controler.rs  main.rs
src/bot_task/: chat_task.rs  combat.rs  debug.rs  goto_block.rs  mod.rs  movement.rs
