[package]
name = "rustbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
azalea = { git = "https://github.com/azalea-rs/azalea", version = "0.12.0" }
azalea-world = "0.12.0"
bevy_ecs = "0.16.0"
lazy_static = "1.5.0"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
tokio = "1.45.0"
uuid = "1.16.0"
